--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   connectivity_plus: ^6.0.3
   url_launcher: ^6.2.6
 
+  # WebView
+  webview_flutter: ^4.4.2
+  webview_flutter_android: ^3.12.1
+  webview_flutter_wkwebview: ^3.9.4
+  share_plus: ^7.2.2
+  permission_handler: ^11.3.1
+
   # Web Scraping
   dio: ^5.4.3+1
   html: ^0.15.4
