--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,9 +68,20 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.9
 
+  # Icon generator
+  flutter_launcher_icons: ^0.13.1
+
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
+  assets:
+    - assets/icons/
+
+# Cấu hình icon launcher
+flutter_launcher_icons:
+  android: true
+  ios: false
+  image_path: "assets/icons/app_icon.jpg"
+  min_sdk_android: 21
+  adaptive_icon_background: "#1e3a8a"
+  adaptive_icon_foreground: "assets/icons/app_icon.jpg"
