--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,15 @@ dependencies:
   # Utilities
   connectivity_plus: ^6.0.3
   url_launcher: ^6.2.6
+  path_provider: ^2.1.4
+  file_picker: ^10.2.0
 
   # WebView
   webview_flutter: ^4.4.2
-  webview_flutter_android: ^3.12.1
+  webview_flutter_android: ^4.7.0
   webview_flutter_wkwebview: ^3.9.4
-  share_plus: ^7.2.2
-  permission_handler: ^11.3.1
+  share_plus: ^11.0.0
+  permission_handler: ^12.0.0+1
 
   # Web Scraping
   dio: ^5.4.3+1
@@ -57,7 +59,11 @@ dependencies:
   beautiful_soup_dart: ^0.3.0
 
   # Additional utilities for scraping
-  intl: ^0.19.0
+  intl: ^0.20.2
+
+  # Firebase AI Logic for translation
+  firebase_core: ^3.14.0
+  firebase_ai: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +75,7 @@ dev_dependencies:
   build_runner: ^2.4.9
 
   # Icon generator
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
@@ -82,6 +88,6 @@ flutter_launcher_icons:
   android: true
   ios: false
   image_path: "assets/icons/app_icon.jpg"
-  min_sdk_android: 21
+  min_sdk_android: 23
   adaptive_icon_background: "#1e3a8a"
   adaptive_icon_foreground: "assets/icons/app_icon.jpg"
